test/corpus/filter_expression.txt
================================================================================
literals
================================================================================

<div>
    content
    {$smarty_variable = $filter_expression|filter_name}
    {"some string"|strtoupper}
    content
</div>

--------------------------------------------------------------------------------

(fragment
  (text)
  (element
    (start_tag
      (tag_name))
    (text)
    (smarty_assignment
      left: (smarty_variable_name
        (smarty_name))
      right: (smarty_filter_expression
        first_argument: (smarty_variable_name
          (smarty_name))
        filter_name: (smarty_name)))
    (smarty_interpolation
      (smarty_filter_expression
        first_argument: (smarty_string)
        filter_name: (smarty_name)))
    (text)
    (end_tag
      (tag_name)))
  (text))
