test/corpus/foreach_nodes.txt
================================================================================
foreach_nodes
================================================================================

<div>
    content
    {foreach $test_variable.some_attr as $variable}
    <span>
        {$variable}
    </span>
    {/foreach}
    content
</div>

--------------------------------------------------------------------------------

(fragment
  (text)
  (element
    (start_tag
      (tag_name))
    (text)
    (smarty_foreach_nodes
      (smarty_foreach_header
        (smarty_member_access_expression
          (smarty_variable_name
            (smarty_name))
          (smarty_name))
        (smarty_variable_name
          (smarty_name)))
      (text)
      (element
        (start_tag
          (tag_name))
        (smarty_interpolation
          (smarty_variable_name
            (smarty_name)))
        (text)
        (end_tag
          (tag_name))))
    (text)
    (end_tag
      (tag_name)))
  (text))
