test/corpus/function_call.txt
================================================================================
function_call
================================================================================

<div>
    {print_some_function x=10 y=$smarty.test}
    <span class="{call_some_function x="evil string! but this is allowed" y='other string'}"
        {call_with_more_attributes d="asdf"}
    ></span>
</div>

--------------------------------------------------------------------------------

(fragment
  (text)
  (element
    (start_tag
      (tag_name))
    (smarty_function_call
      function_name: (smarty_name)
      argument_name: (smarty_name)
      argument_value: (smarty_integer)
      argument_name: (smarty_name)
      argument_value: (smarty_member_access_expression
        (smarty_variable_name
          (smarty_name))
        name: (smarty_name)))
    (text)
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (smarty_function_call
              function_name: (smarty_name)
              argument_name: (smarty_name)
              argument_value: (smarty_string)
              argument_name: (smarty_name)
              argument_value: (smarty_string))))
        (smarty_function_call
          function_name: (smarty_name)
          argument_name: (smarty_name)
          argument_value: (smarty_string)))
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (text))

================================================================================
function call expression
================================================================================
<div>
    content
    {if !empty($x)}
        {do_something($y, $z)}
    {/if}
    content
</div>

--------------------------------------------------------------------------------

(fragment
  (element
    (start_tag
      (tag_name))
    (text)
    (smarty_if_nodes
      condition: (smarty_unary_op_expression
        (smarty_function_call_expression
          function_name: (smarty_name)
          arguments: (smarty_variable_name
            (smarty_name))))
      body: (smarty_function_call
        function_name: (smarty_name)
        arguments: (smarty_variable_name
          (smarty_name))
        arguments: (smarty_variable_name
          (smarty_name))))
    (text)
    (end_tag
      (tag_name)))
  (text))
