test/corpus/function_definition.txt
================================================================================
function definition
================================================================================

{function x y=1}
    <div>
        {$y}
    </div>
{/function}

{function y}
    {* no content *}
{/function}

--------------------------------------------------------------------------------

(fragment
  (text)
  (smarty_function_definition
    (smarty_name)
    (smarty_name)
    (smarty_integer)
    (text)
    (element
      (start_tag
        (tag_name))
      (text)
      (smarty_interpolation
        (smarty_variable_name
          (smarty_name)))
      (text)
      (end_tag
        (tag_name)))
    (text))
  (text)
  (smarty_function_definition
    (smarty_name)
    (text)
    (smarty_comment)
    (text))
  (text))
