test/corpus/if_attribute.txt
================================================================================
if_attribute
================================================================================

<div>
    content
    <span
        attr="hi"
        {if $test_variable}
            attr2="two"
            attr3=three
        {elseif "test"}
            attr35="three point 5"
        {else}
            {* none *}
        {/if}
        attr4="four"
    >
        hello!
    </span>
    <div
        {if $test_variable}
            {* none *}
        {else}
            some="attr"
        {/if}
    />
    content
</div>

--------------------------------------------------------------------------------

(fragment
  (text)
  (element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value)))
        (smarty_if_attributes
          (smarty_variable_name
            (smarty_name))
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (attribute_value)))
          (attribute
            (attribute_name)
            (attribute_value))
          (smarty_elseif_attributes
            (smarty_string)
            (attribute
              (attribute_name)
              (quoted_attribute_value
                (attribute_value))))
          (smarty_else_attributes
            (smarty_comment)))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value))))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (element
      (self_closing_tag
        (tag_name)
        (smarty_if_attributes
          (smarty_variable_name
            (smarty_name))
          (smarty_comment)
          (smarty_else_attributes
            (attribute
              (attribute_name)
              (quoted_attribute_value
                (attribute_value)))))))
    (text)
    (end_tag
      (tag_name)))
  (text))
