test/corpus/if_attrval.txt
================================================================================
if_attrval
================================================================================

<div>
    content
    <span
        class="hi {if $test_variable} other {/if}"
        class2='hi {if $test_variable} other {/if}'
        class3='hi {if $test_variable} other {else} {* with comment *} {/if}'
        class4="hi-{$interpolation} hi"
    >
        hello!
    </span>
    content
</div>

--------------------------------------------------------------------------------

(fragment
  (text)
  (element
    (start_tag
      (tag_name))
    (text)
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value
              (smarty_if_attrval_dq
                (smarty_variable_name
                  (smarty_name))))))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value
              (smarty_if_attrval_sq
                (smarty_variable_name
                  (smarty_name))))))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value
              (smarty_if_attrval_sq
                (smarty_variable_name
                  (smarty_name))
                (smarty_else_attrval_sq
                  (smarty_comment))))))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value
              (smarty_interpolation
                (smarty_variable_name
                  (smarty_name)))))))
      (text)
      (end_tag
        (tag_name)))
    (text)
    (end_tag
      (tag_name)))
  (text))
