test/corpus/if_node.txt
================================================================================
if_node
================================================================================

<div>
    content
    {if $test_variable}
        <span>
            hello!
        </span>
    {elseif $test_variable_2}
        hi!
    {elseif $test_variable_3}
        {if $other_test}
            <div/>
        {else}
            <div>
            </div>
        {/if}
    {/if}
    content
</div>

--------------------------------------------------------------------------------

(fragment
  (text)
  (element
    (start_tag
      (tag_name))
    (text)
    (smarty_if_nodes
      (smarty_variable_name
        (smarty_name))
      (text)
      (element
        (start_tag
          (tag_name))
        (text)
        (end_tag
          (tag_name)))
      (smarty_elseif_nodes
        (smarty_variable_name
          (smarty_name))
        (text))
      (smarty_elseif_nodes
        (smarty_variable_name
          (smarty_name))
        (smarty_if_nodes
          (smarty_variable_name
            (smarty_name))
          (text)
          (element
            (self_closing_tag
              (tag_name)))
          (smarty_else_nodes
            (text)
            (element
              (start_tag
                (tag_name))
              (text)
              (end_tag
                (tag_name)))))))
    (text)
    (end_tag
      (tag_name)))
  (text))
