test/corpus/literals.txt
================================================================================
literals
================================================================================

<div>
    content
    {$smarty_variable = 1}
    {$smarty_variable = 1.1}
    {$smarty_variable = true}
    {$smarty_variable = True}
    {$smarty_variable = TRUE}
    {$smarty_variable = false}
    {$smarty_variable = null}
    {$smarty_variable = NULL}
    {$smarty_variable = "asdfs"}
    {$smarty_variable = 'asdfs'}
    {$smarty_variable = ['asdfs' => 1, $some_variable]}
    content
</div>

--------------------------------------------------------------------------------

(fragment
  (text)
  (element
    (start_tag
      (tag_name))
    (text)
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_integer))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_float))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_boolean))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_boolean))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_boolean))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_boolean))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_null))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_null))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_string))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_string))
    (smarty_assignment
      (smarty_variable_name
        (smarty_name))
      (smarty_array_literal
        (smarty_array_element
          (smarty_string)
          (smarty_integer))
        (smarty_array_element
          (smarty_variable_name
            (smarty_name)))))
    (text)
    (end_tag
      (tag_name)))
  (text))
